--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,13 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 marshmallow==4.0.0
+numpy==1.26.4
 oauthlib==3.3.1
+openvino==2024.5.0
+openvino-telemetry==2025.2.0
+overpy==0.7
+packaging==25.0
+pillow==10.4.0
 python-dotenv==1.1.1
 requests==2.32.4
 requests-oauthlib==2.0.0
@@ -20,4 +26,3 @@ typing_extensions==4.14.1
 urllib3==2.5.0
 URLObject==3.0.0
 Werkzeug==3.1.3
-overpy==0.7
